--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "submodule-directory"]
 	path = submodule-directory
-	url = git@github.com:muhammadaus/portfolio.git
+	url = git@github.com:muhammadaus/Portfolio.git
 [submodule "Portfolio"]
 	path = Portfolio
-	url = git@github.com:muhammadaus/portfolio.git
+	url = git@github.com:muhammadaus/Portfolio.git
